* Restore 'features' as the default feature running path. (#412 Ben Mabey)
* --drb degrades gracefully when no drb server is running and no formatter is provided. (#410 Ben Mabey)
* --language picked up from profiles again. (#409 Ben Mabey)
* Resolved infinite loop problem when --drb was defined in a profile. (#408 Ben Mabey)

=== New Features
* The object returned by element_at (Webrat::Element) has a #to_table that works for table, dl, ol and ul. (Aslak Hellesøy)
* An explanation of why failures are ok is printed when --wip is used. (Aslak Hellesøy)
* Added cucumber alias for cucumber:ok in Rails Rake tasks. (Aslak Hellesøy)

=== Changed features
* element_at('table').to_table should be used instead of table_at('table').to_a. The old way is deprecated but still works. (Aslak Hellesøy)
* element_at (and the depracated table_at) no longer takes a DOM id, only CSS selectors. Change "my_id" to "#my_id". (Aslak Hellesøy)

== 0.3.94 2009-08-06

Kanban take II.

Release 0.3.6 introduced a new --wip switch that can be used to limit work in progress
(WIP). Limiting WIP is central for Kanban Software Development (http://www.infoq.com/articles/hiranabe-lean-agile-kanban).

However, this feature went mostly unnoticed, and because we think it's so great we have decided
to make it the default for Rails projects. When you bootstrap your Rails project for Cucumber
you will now get 2 Cucumber Rake tasks for Kanban development:

  cucumber:ok  : Run features that should pass. This runs your "good,old" features
  cucumber:wip : Run the features you're working on that don't pass yet. Tag them with @wip. Max 2!

So upgrade today and get into the habit of tagging new features with @wip (or invent your own tags).
You'll achieve better flow this way.

=== New features
* Support limiting the number of feature elements with certain tags (#353 Joseph Wilk) 